--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: gude-jes <gude-jes@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 08:48:35 by gude-jes          #+#    #+#              #
-#    Updated: 2024/10/22 10:31:13 by gude-jes         ###   ########.fr        #
+#    Updated: 2024/10/25 10:51:50 by gude-jes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ CFLAGS			= -Wall -Wextra -Werror -g
 
 NAME			= libft.a
 
-LIB_SRCS			=	ft_isalnum.c ft_isalnum_under.c ft_isprint.c ft_memcmp.c  ft_putchar_fd.c ft_split.c ft_str_isalpha.c ft_isspace.c\
+LIB_SRCS			=	ft_isalnum.c ft_isalnum_under.c ft_isprint.c ft_memcmp.c  ft_putchar_fd.c ft_split.c ft_str_isalpha.c ft_isspace.c ft_isempty.c\
 					ft_strlcat.c ft_strncmp.c ft_strcmp.c ft_substr.c ft_atoi.c ft_isalpha.c ft_strclen.c ft_arrlen.c ft_atoll.c\
 					ft_itoa.c ft_memcpy.c  ft_putendl_fd.c ft_strchr.c  ft_strlcpy.c ft_strncpy.c ft_find_c.c ft_strstr.c ft_count_char.c\
 					ft_strnstr.c ft_tolower.c ft_bzero.c   ft_isascii.c ft_striteri.c ft_isdigitloop.c\
