--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: gude-jes <gude-jes@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/19 08:48:35 by gude-jes          #+#    #+#              #
-#    Updated: 2024/11/06 09:13:59 by gude-jes         ###   ########.fr        #
+#    Updated: 2024/11/08 09:14:19 by gude-jes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,7 +20,7 @@ LIB_SRCS			=	ft_isalnum.c ft_isalnum_under.c ft_isprint.c ft_memcmp.c  ft_putcha
 					ft_strlcat.c ft_strncmp.c ft_strcmp.c ft_substr.c ft_atoi.c ft_isalpha.c ft_strclen.c ft_arrlen.c ft_atoll.c\
 					ft_itoa.c ft_memcpy.c  ft_putendl_fd.c ft_strchr.c  ft_strlcpy.c ft_strncpy.c ft_find_c.c ft_strstr.c ft_count_char.c\
 					ft_strnstr.c ft_tolower.c ft_bzero.c   ft_isascii.c ft_striteri.c ft_isdigitloop.c\
-					ft_memmove.c ft_putnbr_fd.c  ft_strdup.c ft_strlen.c  ft_strrchr.c ft_strjoin_free.c\
+					ft_memmove.c ft_putnbr_fd.c  ft_strdup.c ft_strlen.c  ft_strrchr.c ft_strjoin_free.c ft_strchr_nn.c\
 					ft_toupper.c ft_calloc.c  ft_isdigit.c ft_memchr.c  ft_memset.c  \
 					ft_putstr_fd.c  ft_strjoin.c ft_strmapi.c ft_strtrim.c\
 					ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
